# waveshare-eink

./: .gitmodules  CMakeLists.txt  Program.cpp  README.md
Drivers/: Eink.cpp  Eink.h
driver/: Eink.cpp  Eink.h  X11Redirect.cpp  X11Redirect.h
ui/: AppEntry.cpp  AppEntry.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h
